<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:id="@+id/banner_view">

        <com.zhpan.bannerview.BannerViewPager
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/banner_view"
        android:backgroundTint="@color/background"
        android:layout_marginTop="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <RelativeLayout
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:id="@+id/wlan_name_panel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_twotone_wifi_24"
                    tools:src="@drawable/ic_twotone_wifi_24"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:id="@+id/wifi_name_text"
                    android:text="@string/default_wifi_name"
                    android:layout_gravity="center_vertical"
                    tools:text="AHGF-Student(学生)"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/username_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/wlan_name_panel"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Material3EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="username"
                        android:gravity="fill_vertical"
                        android:hint="@string/user_account"
                        android:inputType="number"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/username_layout"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Material3EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleContentDescription="@string/content_desc_password_show">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/carrier_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:layout_below="@id/password_layout">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/choose_carrier_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_carrier"/>

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/carrier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/carrier_name"
                        android:spinnerMode="dropdown"/>

                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/remember_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="center_vertical|end"
                    android:text="@string/remem_passwd"/>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/carrier_layout"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:text="@string/btn_login"
                android:textSize="14sp"
                style="@style/Material3Button"
                app:icon="@drawable/baseline_login_24" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/server_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:text="@string/server_status_default"/>

        </RelativeLayout>

    </LinearLayout>



</RelativeLayout>