<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/coor">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_appbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?android:colorBackground"
                app:layout_anchor="@+id/appBarLayout"
                app:layout_anchorGravity="center">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="14dp"
                    android:id="@+id/back"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:src="@drawable/ic_twotone_keyboard_backspace_24"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_page_title"
                    android:textSize="22sp" />

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/coor"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/status_bar"
                android:indeterminate="true"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/status_bar"
                android:id="@+id/status_text"
                android:text="@string/please_wait"
                android:layout_marginStart="8dp"
                android:textSize="18sp"
                tools:text="服务器反馈状态: OK" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/status_text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/status_text"
                android:text="@string/wait_for_response"
                android:layout_marginStart="8dp"
                android:textSize="18sp"
                tools:text="服务器反馈消息：OK" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/status_text_3"
                android:layout_below="@id/status_text_2"
                android:text="@string/web_title_text"
                android:layout_marginStart="8dp"
                android:textSize="18sp"
                tools:text="网页标题"/>

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:id="@+id/captive_status"
                android:src="@drawable/ic_twotone_portable_wifi_off_24"
                tools:src="@drawable/ic_baseline_check_24"/>

        </RelativeLayout>

        <WebView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/webview"/>

    </LinearLayout>

</RelativeLayout>